syntax = "proto2";

import "ProtocolMessage.proto";

extend ProtocolMessage {
  optional string getKeyboardSessionMessage = 29;
}

message GetKeyboardSessionMessage {
  
}
