syntax = "proto2";

import "ProtocolMessage.proto";

extend ProtocolMessage {
  optional string getStateMessage = 8;
}
