syntax = "proto2";

import "ProtocolMessage.proto";
import "TextEditingAttributes.proto";

extend ProtocolMessage {
  optional KeyboardMessage keyboardMessage = 28;
}

message KeyboardMessage {
  optional int32 state = 1;
  optional TextEditingAttributes attributes = 3;
}
