syntax = "proto2";

import "ProtocolMessage.proto";
import "VirtualTouchDeviceDescriptor.proto";

extend ProtocolMessage {
  optional RegisterHIDDeviceMessage registerHIDDeviceMessage = 11;
}

message RegisterHIDDeviceMessage {
  optional VirtualTouchDeviceDescriptor deviceDescriptor = 1;
}
