syntax = "proto2";

import "ProtocolMessage.proto";

extend ProtocolMessage {
  optional RegisterHIDDeviceResultMessage registerHIDDeviceResultMessage = 12;
}

message RegisterHIDDeviceResultMessage {
  optional int32 errorCode = 1;
  optional int32 deviceIdentifier = 2;
}
