syntax = "proto2";

import "ProtocolMessage.proto";
import "CommandInfo.proto";
import "CommandOptions.proto";
import "PlayerPath.proto";

extend ProtocolMessage {
  optional SendCommandMessage sendCommandMessage = 6;
}

message SendCommandMessage {
  optional Command command = 1;
  optional CommandOptions options = 2;
  optional PlayerPath playerPath = 3;
}
