syntax = "proto2";

import "ProtocolMessage.proto";
import "AudioFormatSettings.proto";
import "AudioBuffer.proto";

extend ProtocolMessage {
  optional SendVoiceInputMessage sendVoiceInputMessage = 36;
}

message VoiceInputTime {
  required float timestamp = 1;
  required float sampleRate = 2;
}

message VoiceInputDataBlock {
  required AudioBuffer buffer = 1;
  optional VoiceInputTime time = 2;
  optional float gain = 3;
}

message SendVoiceInputMessage {
  required VoiceInputDataBlock dataBlock = 1;
}
