syntax = "proto2";

import "ProtocolMessage.proto";

extend ProtocolMessage {
  optional SetArtworkMessage setArtworkMessage = 10;
}

message SetArtworkMessage {
  optional bytes jpegData = 1;
}
