syntax = "proto2";

import "ProtocolMessage.proto";

extend ProtocolMessage {
  optional SetHiliteModeMessage setHiliteModeMessage = 44;
}

message SetHiliteModeMessage {
  optional bool hiliteMode = 1;
}
