syntax = "proto2";

import "ProtocolMessage.proto";

extend ProtocolMessage {
  optional SetRecordingStateMessage setRecordingStateMessage = 35;
}

message SetRecordingStateMessage {
  enum RecordingState {
    Recording = 1;
    NotRecording = 2;
  }

  required RecordingState state = 1;
}
