syntax = "proto2";

import "TransactionPackets.proto";
import "ProtocolMessage.proto";
import "PlayerPath.proto";

extend ProtocolMessage {
  optional TransactionMessage transactionMessage = 38;
}

message TransactionMessage {
  optional uint64 name = 1;
  optional TransactionPackets packets = 2;
  optional PlayerPath playerPath = 3;
}
