syntax = "proto2";

import "ProtocolMessage.proto";

extend ProtocolMessage {
  optional VolumeControlAvailabilityMessage volumeControlAvailabilityMessage = 22;
}

message VolumeControlAvailabilityMessage {
  optional bool volumeControlAvailable = 1;
}
