syntax = "proto2";

import "ProtocolMessage.proto";

extend ProtocolMessage {
  optional WakeDeviceMessage wakeDeviceMessage = 45;
}

message WakeDeviceMessage {

}
